--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,12 +6,12 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Contracts Tab -->
-  <ion-tab title="Contracts" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/contracts">
+  <ion-tab title="Contracts" icon-off="ion-document" icon-on="ion-document" href="#/tab/contracts">
     <ion-nav-view name="tab-contracts"></ion-nav-view>
   </ion-tab>
 
   <!-- Add Contract Tab -->
-  <ion-tab title="Add contract" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/new-contract">
+  <ion-tab title="Add contract" icon-off="ion-plus-circled" icon-on="ion-plus-circled" href="#/tab/new-contract">
     <ion-nav-view name="tab-add-contract"></ion-nav-view>
   </ion-tab>
 
