--- a/www/templates/contract-add.html
+++ b/www/templates/contract-add.html
@@ -7,7 +7,7 @@
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Budget</span>
-        <input type="text" ng-model="budget" placeholder="10000">
+        <input type="number" ng-model="budget" placeholder="10000">
       </label>
       <label class="item item-input item-select">
         <div class="input-label">Budget currency</div>
