--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,4 @@
 /* Empty. Add your own CSS if you like */
-.platform-ios .download,
-.platform-browser .download {
+.platform-ios .download {
   display: none;
 }
